# fairsharer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/fairsharer/: __init__.py  core.py
tests/: test_fairsharer.py
